<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="50dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="143dp"
        android:layout_height="153dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/ic_headshot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/head_shot" />

    <Button
        android:id="@+id/button"
        android:layout_width="131dp"
        android:layout_height="90dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/holo_purple"
        android:text="@string/button_hobbies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="131dp"
        android:layout_height="90dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="45dp"
        android:layout_marginStart="30dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="goToSkills"
        android:text="@string/button_skills"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="131dp"
        android:layout_height="90dp"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/white"
        android:text="@string/button_experience"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="131dp"
        android:layout_height="90dp"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="45dp"
        android:layout_marginStart="30dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="goToProjects"
        android:text="@string/button_projects"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/headshot_description"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</android.support.constraint.ConstraintLayout>