<?xml version="1.0" encoding="utf-8"?>


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/background_light"
        tools:context=".ProjectsActivity"
        tools:layout_editor_absoluteY="50dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="362dp"
            android:layout_height="219dp"
            android:layout_marginBottom="332dp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/ic_headshot"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner1"
            app:srcCompat="@drawable/head_shot"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="309dp"
            android:layout_height="43dp"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_weight="2"
            android:text="@string/project_header"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="cursive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="wrap" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="313dp"
        android:layout_marginTop="12dp"
        android:fillViewport="false"
        android:orientation="vertical"
        android:padding="10dp"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/editText3"
                android:layout_width="71dp"
                android:layout_height="19dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:ems="10"
                android:inputType="none|textPersonName"
                android:text="@string/projects_body_team_size"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/editText5"
                android:layout_width="69dp"
                android:layout_height="23dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:inputType="none|textPersonName"
                android:text="@string/projects_body_role"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="277dp"
                android:layout_height="150dp"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/editText2"
                android:layout_width="74dp"
                android:layout_height="21dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:inputType="none|textPersonName"
                android:text="@string/projects_body_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/editText4"
                android:layout_width="71dp"
                android:layout_height="100dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:inputType="none|textPersonName"
                android:text="@string/projects_body_outcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="277dp"
                android:layout_height="69dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="4dp"
                app:layout_constraintBottom_toTopOf="@+id/editText4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.816"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="277dp"
                android:layout_height="150dp"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="277dp"
                android:layout_height="18dp"
                android:layout_marginTop="108dp"
                android:text="@string/number_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>


    </ScrollView>

    </android.support.constraint.ConstraintLayout>